# libgtkplayer

./: .gitignore  Makefile.am  README.md  configure.ac
data/: Makefile.am
src/: Makefile.am  gtkplayer.c  libgtkplayer-version.h.in  libgtkplayer.h  player.c  player.h
src/resources/: player.gresource.xml
